[tool.poetry]
name = "my_krml_14228833"
version = "0.1.10"
description = "A package for doing great things!"
authors = ["Meghana"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.1"
scikit-learn = "1.2.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
